--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="68ff82">  <td>21/08/15 16:49:48</td>   <td>0</td> <td title="&lt;&lt;CukeRunner.teardown()[pri:0, instance:com.ebay.runner.CukeRunner@2a7f1f10]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855610584</td>   <td></td> </tr>
-<tr bgcolor="d0c991">  <td>21/08/15 16:49:47</td>   <td>-736</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.ebay.runner.CukeRunner@2a7f1f10]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855610584</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>21/08/15 16:49:41</td>   <td>-6516</td> <td title="&gt;&gt;CukeRunner.initDriver()[pri:0, instance:com.ebay.runner.CukeRunner@2a7f1f10]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855610584</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>21/08/15 16:49:48</td>   <td>-231</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CukeRunner.writeExtentReport()[pri:0, instance:com.ebay.runner.CukeRunner@2a7f1f10]">&lt;&lt;writeExtentReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855610584</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>21/08/15 16:49:47</td>   <td>-589</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CukeRunner.setup()[pri:0, instance:com.ebay.runner.CukeRunner@2a7f1f10]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855610584</td>   <td></td> </tr>
-<tr bgcolor="d0c991">  <td>21/08/15 16:49:48</td>   <td>-219</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.ebay.runner.CukeRunner@2a7f1f10]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855610584</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>21/08/15 16:49:47</td>   <td>-747</td> <td>&nbsp;</td><td title="&gt;&gt;CukeRunner.initDriver()[pri:0, instance:com.ebay.runner.CukeRunner@2a7f1f10]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855610584</td>   <td></td> </tr>
-<tr bgcolor="d0c991">  <td>21/08/15 16:49:47</td>   <td>-477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ebay.runner.CukeRunner@2a7f1f10]">feature</td> 
-  <td>main@1855610584</td>   <td></td> </tr>
+<tr bgcolor="9286a3">  <td>21/08/15 18:52:23</td>   <td>0</td> <td title="&gt;&gt;CukeRunner.initDriver()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="9286a3">  <td>21/08/15 18:52:27</td>   <td>4631</td> <td>&nbsp;</td><td title="&gt;&gt;CukeRunner.initDriver()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="6c6fbb">  <td>21/08/15 18:52:27</td>   <td>4653</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="9286a3">  <td>21/08/15 18:52:28</td>   <td>5132</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CukeRunner.setup()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="6c6fbb">  <td>21/08/15 18:52:28</td>   <td>5623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">feature</td> 
+  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="9286a3">  <td>21/08/15 18:52:49</td>   <td>26042</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CukeRunner.writeExtentReport()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&lt;&lt;writeExtentReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="6c6fbb">  <td>21/08/15 18:52:49</td>   <td>26074</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="9286a3">  <td>21/08/15 18:52:50</td>   <td>26890</td> <td title="&lt;&lt;CukeRunner.teardown()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
 </table>
