--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c6fbb">  <td>22/08/29 13:24:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">feature</td> 
-  <td>main@1373810119</td>   <td></td> </tr>
-<tr bgcolor="9286a3">  <td>22/08/29 13:24:14</td>   <td>-27897</td> <td title="&gt;&gt;CukeRunner.initDriver()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
-<tr bgcolor="9286a3">  <td>22/08/29 13:24:41</td>   <td>-728</td> <td>&nbsp;</td><td title="&gt;&gt;CukeRunner.initDriver()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
-<tr bgcolor="6c6fbb">  <td>22/08/29 13:24:41</td>   <td>-710</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
-<tr bgcolor="9286a3">  <td>22/08/29 13:24:41</td>   <td>-348</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CukeRunner.setup()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
-<tr bgcolor="6c6fbb">  <td>22/08/29 13:24:57</td>   <td>15797</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
-<tr bgcolor="9286a3">  <td>22/08/29 13:24:58</td>   <td>16487</td> <td title="&lt;&lt;CukeRunner.teardown()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
-<tr bgcolor="9286a3">  <td>22/08/29 13:24:57</td>   <td>15771</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CukeRunner.writeExtentReport()[pri:0, instance:com.ebay.runner.CukeRunner@1d29cf23]">&lt;&lt;writeExtentReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>22/08/29 18:26:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ebay.runner.CukeRunner@34cd072c]">feature</td> 
+  <td>main@1166151249</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/08/29 18:25:59</td>   <td>-12827</td> <td title="&gt;&gt;CukeRunner.initDriver()[pri:0, instance:com.ebay.runner.CukeRunner@34cd072c]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/08/29 18:26:11</td>   <td>-590</td> <td>&nbsp;</td><td title="&gt;&gt;CukeRunner.initDriver()[pri:0, instance:com.ebay.runner.CukeRunner@34cd072c]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>22/08/29 18:26:11</td>   <td>-576</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.ebay.runner.CukeRunner@34cd072c]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/08/29 18:26:12</td>   <td>-300</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CukeRunner.setup()[pri:0, instance:com.ebay.runner.CukeRunner@34cd072c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>22/08/29 18:26:54</td>   <td>41643</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.ebay.runner.CukeRunner@34cd072c]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/08/29 18:26:54</td>   <td>42245</td> <td title="&lt;&lt;CukeRunner.teardown()[pri:0, instance:com.ebay.runner.CukeRunner@34cd072c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/08/29 18:26:54</td>   <td>41617</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CukeRunner.writeExtentReport()[pri:0, instance:com.ebay.runner.CukeRunner@34cd072c]">&lt;&lt;writeExtentReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
 </table>
